<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.10">
  <DUT Name="CommandBlockPos" Id="{8f368442-c415-42b2-b751-673ee70c0436}">
    <Declaration><![CDATA[TYPE CommandBlockPos EXTENDS CommandBlockBase :
STRUCT
	CONTROL_WORD:WORD;
	COORDINATE:LWORD;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>